2001-06-13  Martin Baulig  <baulig@suse.de>

	* gnome-selector.[ch]: Moved to libgnome-extra/libgnome/.
	* gnome-selector-factory.[ch]: Likewise.
	* gnome-async-context.[ch]: Likewise.

2001-06-12  Martin Baulig  <baulig@suse.de>

	* gnome-program.c (gnome_program_get_property): Implemented PROP_POPT_CONTEXT.

2001-06-10  Martin Baulig  <baulig@suse.de>

	* gnome-config.[ch]: Finally removed this. It's already in libcompat.

	* gnome-paper.[ch]: Copied to libcompat and don't compile it anymore. This belongs into
	libgnomeprint or some printing library / application.

	* gnome-scores.[ch]: Moved to libcompat. This belongs into some games library, but not
	into libgnome.

	* gnome-remote.[ch]: Don't compile this for the moment.
	(FIXME: What should we do with this code ? Since this was only a wrapper around
	gnome_config calls we don't really need to have this in libgnome. However, IMO it'd be
	nice to have this functionality in gnome-exec).

	* gnome-i18n.c: #ifdef FIXME all gnome_config_calls. The big FIXME is to decide whether
	we still want/need this at all.

	* gnome-exec.c (gnome_prepend_terminal_to_vector): Use bonobo-config, not gnome-config.

2001-06-10  Cody Russell  <bratsche@gnome.org>

	* gnome-preferences: Change preprocessor pasting from ##t## to just ## t.

2001-06-10  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.c (gnome_ditem_save): Implemented.

2001-06-10  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.c: Rewrote this to use bonobo-config with the new ditem moniker.
	(the old version of this file is at CVS revision 1.40).

	* gnome-ditem.h (GnomeDesktopItemLoadFlags): Removed
	GNOME_DESKTOP_ITEM_LOAD_NO_DROP and GNOME_DESKTOP_ITEM_LOAD_NO_OTHER_SECTIONS.
	(gnome_desktop_item_get_type): Changed return value to GNOME_DesktopEntryType.
	(gnome_desktop_item_get_command): Now returns a `gchar *' which you need to g_free.
	(gnome_desktop_item_get_icon_path): Likewise.
	(gnome_desktop_item_get_name): Likewise.